[gd_scene load_steps=15 format=2]

[ext_resource path="res://catchebles/fish/FishLittle.gd" type="Script" id=1]
[ext_resource path="res://catchebles/fish/fish_little.png" type="Texture" id=2]
[ext_resource path="res://catchebles/RemainsParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/bubble/BubbleEmitter.tscn" type="PackedScene" id=4]

[sub_resource type="Curve" id=35]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 35 )

[sub_resource type="Gradient" id=33]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=34]
gradient = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=36]
resource_local_to_scene = true
emission_shape = 5
emission_ring_radius = 40.0
emission_ring_inner_radius = 40.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 98.22
angular_velocity = 227.43
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 32 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.07
color_ramp = SubResource( 34 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ImageContainer/FishLittle2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ImageContainer:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=40]
resource_name = "chew"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ImageContainer/FishLittle2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 19.6983, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ImageContainer:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 7.7 ]
}

[sub_resource type="AtlasTexture" id=38]
resource_local_to_scene = true
atlas = ExtResource( 2 )
region = Rect2( 160, 601, 2389, 1295 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 999, 128, 468, 291 )

[sub_resource type="CapsuleShape2D" id=37]
radius = 18.9999
height = 104.0

[node name="LittleFish" type="KinematicBody2D" groups=["detonatable"]]
collision_layer = 6
collision_mask = 0
script = ExtResource( 1 )

[node name="RemainsParticles" parent="." instance=ExtResource( 3 )]
process_material = SubResource( 36 )

[node name="BubbleEmitter" parent="." instance=ExtResource( 4 )]

[node name="ImageContainer" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ImageContainer"]
root_node = NodePath("../..")
anims/RESET = SubResource( 41 )
anims/chew = SubResource( 40 )

[node name="FishLittle" type="Sprite" parent="ImageContainer"]
position = Vector2( -8, -1 )
scale = Vector2( 0.07, 0.07 )
texture = SubResource( 38 )

[node name="FishLittle2" type="Sprite" parent="ImageContainer"]
position = Vector2( -48, 19 )
scale = Vector2( 0.07, 0.07 )
texture = SubResource( 39 )
offset = Vector2( -150, -37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
rotation = -1.57079
shape = SubResource( 37 )
